--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
 <title>eclassroom-tianfangskill</title>
 </head>
 <body>
-<div id="ice_container"></div>
+<div id="baiandban"></div>
 <script src="./bundle.js"></script>
 
 </body>
