--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>eclassroom-tianfangskill</title>
+<title>eclassroom-tianfangskill---</title>
 </head>
 <body>
 <div id="baiandban"></div>
+<script src="./agorartc2.js"></script>
+<script src="./cos-js-sdk-v5.js"></script>
+
 <script src="./bundle.js"></script>
 
 </body>
