--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="baiandban"></div>
-<script src="./agorartc2.js"></script>
+<script src="./AgoraRTCSDK-2.3.1.js"></script>
 <script src="./cos-js-sdk-v5.js"></script>
 
 <script src="./bundle.js"></script>
